samples/_failures_safe/1761477981_788d5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c1997fb.c: In function ‘display_high_severity_entries’:
./samples/SAFE/__tmp_5c1997fb.c:150:33: error: expected ‘)’ at end of input
  150 |     for (int i = 0; i < count; i
      |         ~                       ^
      |                                 )
./samples/SAFE/__tmp_5c1997fb.c:150:5: error: expected declaration or statement at end of input
  150 |     for (int i = 0; i < count; i
      |     ^~~
